# dupicolib

./: CHANGELOG.md  README.md  pyproject.toml  requirements.txt
dupicolib/: board_command_class_factory.py  board_commands.py  board_commands_interface.py  board_fw_version.py  board_utilities.py  hardware_board_commands.py  utils.py
dupicolib/board_interfaces/: brutus28_board_commands.py  command_structures.py  m3_board_commands.py
dupicolib/board_interfaces/special_modes/: cxfer.py
tests/: conftest.py  test_board_command_class_factory.py  test_board_utilities.py  test_brutus28_board_commands.py  test_m3_pin_mapping.py  test_pin_mapping.py  test_utils.py  test_version_parsing.py
